--- a/STARTUP-WEBSITE/styles.css
+++ b/STARTUP-WEBSITE/styles.css
@@ -1,146 +1,171 @@
 *{
     box-sizing: border-box;
-}
-
-html{
-    font-family: 'Work sans', sans-serif;
+    }
+    
+    html{
     font-size: 16px;
-}
-
-.page{
-  width: 1400px;
-  margin: auto;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-}
-
-.header{
+    font-family: 'Work sans', sans-serif;
+    }
+    
+    .page{
+    width: 1400px;
+    margin: auto;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    }
+    
+    .header{
     width: 1140px;
     height: 62px;
     margin: auto;
     display: flex;
-}
-
-.header__button{
-    background-color: #3040c4;
-    color: #fff;
+    }
+    
+    .header__button{
+    background-color: #3040C4;
     width: 160px;
     height: 48px;
+    color: white;
     font-size: 18px;
     font-weight: 700;
-    border-radius: 2px;
     border: none;
-}
-
-.navigation{
+    border-radius: 2px;
+    }
+    
+    .navigation{
     margin-left: auto;
     margin-top: 7px;
     margin-right: 75px;
-}
+    }
     
-.navigation__item{
+    .navigation__arrow{
+    background-image: url(img/Arrow.png);
+    display: inline-block;
+    width: 8px;
+    height: 5px;
+    margin-left: 11px;
+    }
+    
+    .navigation__item{
     color: #2B292D;
     text-decoration: none;
     line-height: 25px;
     font-size: 18px;
     margin-right: 50px;
-}
+    }
     
-.navigation__item_selected{
-    font-weight: 700;
-}
-    
-.navigation__item:last-child{
-    margin-right: 0;
-}
-
-.navigation__arrow{
-    background-image: url(img/Arrow.png);
-    margin-left: 11px;
-    display: inline-block;
-    height: 5px;
-    width: 8px;
-}
-    
-.logo{
-    display: flex;
-}
-    
-.logo__image{
-    width: 60px;
-    height: 60px;
-    margin-right: 15px;
-}
-
-.logo__name{
-    font-size: 20px;
-    line-height: 25px;
+    .navigation__item_selected{
     font-weight: 700;
     }
     
-.logo__description{
-    font-size: 18px;
+    .navigation__item:last-child{
+    margin-right: 0;
+    }
+    
+    .logo{
+    display: flex;
+    }
+    
+    .logo__image{
+    width: 60px;
+    height: 60px;
+    margin-right: 15px ;
+    }
+    
+    .logo__name{
+    font-size: 20px ;
+    font-weight: 700;
+    line-height: 25px;
+    }
+    
+    .logo__description{
+    font-size: 18px ;
     line-height: 25px;
     color: #2B292D;
     opacity: 0.6;
-}
+    }
     
-.logo__text{
+    .logo__text{
     display: flex;
     flex-direction: column;
     justify-content: center;
-}
-
-.top-section{
-    background-color: #F3C6BD;
+    }
+    
+    .top-section{
     padding-top: 39px;
-}
-        
-.footer{
-    margin-top: auto;
+    background-color: #F3C6BD;
+    }
+    
+    .footer{
     display: flex;
     flex-direction: column;
-}
-        
-.footer-links{
-    width: 1140px;
+    margin-top: auto;
+    }
+    
+    .about-company{
+    margin-top: 44px;
+    }
+    
+    .footer__description{
+    line-height: 26px;
+    font-size: 18px;
+    width: 360px;
+    margin-top: 26px;
+    color: rgba(43, 41, 45, 0.6);
+    }
+    
+    .footer-links{
     height: 50px;
+    width: 1140px;
     margin: 0 auto;
     display: flex;
     align-items: center;
-}
-        
-.footer-navigation{
-    width: 1140;
+    }
+    
+    .footer-navigation{
+    width: 1140px;
     margin: 0 auto;
     height: 338px;
-}
-
+    display: flex;
+    }
+    
+    .downloads{
+    margin-top: 25px;
+    }
+    
+.downloads__item{
+    margin-right: 10px;
+    }
+    
+.additional-navigation{
+    margin-top: 60px;
+    margin-left: auto;
+    display: flex;
+    }
+    
 .footer__line{
     border-top: 1px solid #2B292D;
     width: 100%;
-    opacity: 0.1;
     margin: 0;
-}    
-        
+    opacity: 0.1;
+    }
+    
 .terms{
     line-height: 50px;
     font-size: 14px;
-}
+    }
     
 .terms__items{
     text-decoration: none;
     color: rgba(43, 41, 45, 0.6);
     margin-right: 22px;
-}
-    
-.social-links{
-    margin-left: auto;
-}
+    }
     
 .social-links__item{
     margin-left: 20px;
-}
+    }
     
-            
+.social-links{
+    margin-left: auto;
+    }
